generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImTextureRef_t ImTextureRef;
typedef unsigned long long ImU64;  
typedef struct ImFont_t ImFont;                                      
typedef struct ImFontAtlas_t ImFontAtlas;                            
typedef struct ImFontAtlasRect_t ImFontAtlasRect;                    
typedef struct ImFontConfig_t ImFontConfig;                          
typedef struct ImFontLoader_t ImFontLoader;                          
typedef int ImGuiWindowFlags;       
typedef unsigned int ImWchar32;        
typedef unsigned short ImWchar16;      
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
typedef ImU64 ImTextureID;  
CIMGUI_API bool ImGui_Begin(const char* name, bool* p_open , ImGuiWindowFlags flags );
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
struct ImFontConfig_t
{
    char                Name[40];              
    void*               FontData;              
    int                 FontDataSize;          
    bool                FontDataOwnedByAtlas;  
    bool                MergeMode;             
    bool                PixelSnapH;            
    ImS8                OversampleH;           
    ImS8                OversampleV;           
    ImWchar             EllipsisChar;          
    float               SizePixels;            
    const ImWchar*      GlyphRanges;           
    const ImWchar*      GlyphExcludeRanges;    
    ImVec2              GlyphOffset;           
    float               GlyphMinAdvanceX;      
    float               GlyphMaxAdvanceX;      
    float               GlyphExtraAdvanceX;    
    ImU32               FontNo;                
    unsigned int        FontLoaderFlags;       
    float               RasterizerMultiply;    
    float               RasterizerDensity;     
    float               ExtraSizeScale;        
    ImFontFlags         Flags;                 
    ImFont*             DstFont;               
    const ImFontLoader* FontLoader;            
    void*               FontLoaderData;        
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    bool                PixelSnapV;            
#endif 
};
typedef int ImFontAtlasRectId;
struct ImFontAtlasRect_t
{
    unsigned short x, y;      
    unsigned short w, h;      
    ImVec2         uv0, uv1;  
};
struct ImFontAtlas_t
{
    ImFontAtlasFlags          Flags;                                          
    ImTextureFormat           TexDesiredFormat;                               
    int                       TexGlyphPadding;                                
    int                       TexMinWidth;                                    
    int                       TexMinHeight;                                   
    int                       TexMaxWidth;                                    
    int                       TexMaxHeight;                                   
    void*                     UserData;                                       
#ifdef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImTextureRef              TexRef;                                         
#else
    union                     
    {
        ImTextureRef TexRef;
        ImTextureRef TexID;
    };
#endif 
    ImTextureData*            TexData;                                        
    ImVector_ImTextureDataPtr TexList;                                        
    bool                      Locked;                                         
    bool                      RendererHasTextures;                            
    bool                      TexIsBuilt;                                     
    bool                      TexPixelsUseColors;                             
    ImVec2                    TexUvScale;                                     
    ImVec2                    TexUvWhitePixel;                                
    ImVector_ImFontPtr        Fonts;                                          
    ImVector_ImFontConfig     Sources;                                        
    ImVec4                    TexUvLines[IM_DRAWLIST_TEX_LINES_WIDTH_MAX+1];  
    int                       TexNextUniqueID;                                
    int                       FontNextUniqueID;                               
    ImVector_ImDrawListSharedDataPtr DrawListSharedDatas;                     
    ImFontAtlasBuilder*       Builder;                                        
    const ImFontLoader*       FontLoader;                                     
    const char*               FontLoaderName;                                 
    void*                     FontLoaderData;                                 
    unsigned int              FontLoaderFlags;                                
    int                       RefCount;                                       
    ImGuiContext*             OwnerContext;                                   
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImFontAtlasRect           TempRect;                                       
#endif 
};
CIMGUI_API ImFont*           ImFontAtlas_AddFont(ImFontAtlas* self, const ImFontConfig* font_cfg);
CIMGUI_API ImFont*           ImFontAtlas_AddFontDefault(ImFontAtlas* self, const ImFontConfig* font_cfg );                  
CIMGUI_API ImFont*           ImFontAtlas_AddFontDefaultVector(ImFontAtlas* self, const ImFontConfig* font_cfg );            
CIMGUI_API ImFont*           ImFontAtlas_AddFontDefaultBitmap(ImFontAtlas* self, const ImFontConfig* font_cfg );            
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromFileTTF(ImFontAtlas* self, const char* filename, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges );
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromMemoryTTF(ImFontAtlas* self, void* font_data, int font_data_size, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges ); 
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromMemoryCompressedTTF(ImFontAtlas* self, const void* compressed_font_data, int compressed_font_data_size, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges ); 
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromMemoryCompressedBase85TTF(ImFontAtlas* self, const char* compressed_font_data_base85, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges ); 
CIMGUI_API void              ImFontAtlas_RemoveFont(ImFontAtlas* self, ImFont* font);
CIMGUI_API void              ImFontAtlas_Clear(ImFontAtlas* self);                                                                      
CIMGUI_API void              ImFontAtlas_CompactCache(ImFontAtlas* self);                                                               
CIMGUI_API void              ImFontAtlas_SetFontLoader(ImFontAtlas* self, const ImFontLoader* font_loader);                             
CIMGUI_API void              ImFontAtlas_ClearInputData(ImFontAtlas* self);                                                             
CIMGUI_API void              ImFontAtlas_ClearFonts(ImFontAtlas* self);                                                                 
CIMGUI_API void              ImFontAtlas_ClearTexData(ImFontAtlas* self);                                                               
CIMGUI_API bool ImFontAtlas_Build(ImFontAtlas* self);                                  
CIMGUI_API void ImFontAtlas_GetTexDataAsAlpha8(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel ); 
CIMGUI_API void ImFontAtlas_GetTexDataAsRGBA32(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel ); 
CIMGUI_API void ImFontAtlas_SetTexID(ImFontAtlas* self, ImTextureID id);               
CIMGUI_API bool ImFontAtlas_IsBuilt(const ImFontAtlas* self);                          
CIMGUI_API const ImWchar*    ImFontAtlas_GetGlyphRangesDefault(ImFontAtlas* self);                                                      
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesGreek(ImFontAtlas* self);                    
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesKorean(ImFontAtlas* self);                   
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesJapanese(ImFontAtlas* self);                 
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesChineseFull(ImFontAtlas* self);              
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesChineseSimplifiedCommon(ImFontAtlas* self);  
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesCyrillic(ImFontAtlas* self);                 
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesThai(ImFontAtlas* self);                     
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesVietnamese(ImFontAtlas* self);               
CIMGUI_API ImFontAtlasRectId ImFontAtlas_AddCustomRect(ImFontAtlas* self, int width, int height, ImFontAtlasRect* out_r );  
CIMGUI_API void              ImFontAtlas_RemoveCustomRect(ImFontAtlas* self, ImFontAtlasRectId id);                                     
CIMGUI_API bool              ImFontAtlas_GetCustomRect(const ImFontAtlas* self, ImFontAtlasRectId id, ImFontAtlasRect* out_r);          
CIMGUI_API ImFontAtlasRectId      ImFontAtlas_AddCustomRectRegular(ImFontAtlas* self, int w, int h);                                                                                          
CIMGUI_API const ImFontAtlasRect* ImFontAtlas_GetCustomRectByIndex(ImFontAtlas* self, ImFontAtlasRectId id);                                                                                  
CIMGUI_API void                   ImFontAtlas_CalcCustomRectUV(const ImFontAtlas* self, const ImFontAtlasRect* r, ImVec2* out_uv_min, ImVec2* out_uv_max);                                    
struct ImFont_t
{
    ImFontBaked*             LastBaked;                                             
    ImFontAtlas*             OwnerAtlas;                                            
    ImFontFlags              Flags;                                                 
    float                    CurrentRasterizerDensity;                              
    ImGuiID                  FontId;                                                
    float                    LegacySize;                                            
    ImVector_ImFontConfigPtr Sources;                                               
    ImWchar                  EllipsisChar;                                          
    ImWchar                  FallbackChar;                                          
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  
    bool                     EllipsisAutoBake;                                      
    ImGuiStorage             RemapPairs;                                            
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 
#endif 
};