generated-out/vanilla/dear-imgui-raw-vanilla/cbits/DearImGuiWrappers.h

ImFontAtlasRectId ImFontAtlas_AddCustomRectFontGlyph_wrap(ImFontAtlas* self, ImFont* font, ImWchar codepoint, int w, int h, float advance_x, ImVec2 const* offset);
ImFontAtlasRectId ImFontAtlas_AddCustomRectFontGlyphForSize_wrap(ImFontAtlas* self, ImFont* font, float font_size, ImWchar codepoint, int w, int h, float advance_x, ImVec2 const* offset);
void ImFontAtlas_SetTexIDImTextureRef_wrap(ImFontAtlas* self, ImTextureRef const* id);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);