generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImFontAtlas.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImFontAtlas where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: ImFontAtlasRectId AddCustomRect(ImFontAtlas* self, int width, int height, ImFontAtlasRect* out_r)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddCustomRect"
  imFontAtlas_AddCustomRect :: (Ptr ImFontAtlas) -> CInt -> CInt -> (Ptr ImFontAtlasRect) -> IO ImFontAtlasRectId
foreign import capi unsafe "DearImGuiWrappers.h ImFontAtlas_AddCustomRectFontGlyph_wrap"
  c_imFontAtlas_AddCustomRectFontGlyph :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> ImWchar -> CInt -> CInt -> CFloat -> (Ptr ImVec2) -> IO ImFontAtlasRectId

imFontAtlas_AddCustomRectFontGlyph :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> ImWchar -> CInt -> CInt -> CFloat -> ImVec2 -> IO ImFontAtlasRectId
imFontAtlas_AddCustomRectFontGlyph self font codepoint w h advance_x offset =
  with offset $ \_p6 -> c_imFontAtlas_AddCustomRectFontGlyph self font codepoint w h advance_x _p6

foreign import capi unsafe "DearImGuiWrappers.h ImFontAtlas_AddCustomRectFontGlyphForSize_wrap"
  c_imFontAtlas_AddCustomRectFontGlyphForSize :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> CFloat -> ImWchar -> CInt -> CInt -> CFloat -> (Ptr ImVec2) -> IO ImFontAtlasRectId

imFontAtlas_AddCustomRectFontGlyphForSize :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> CFloat -> ImWchar -> CInt -> CInt -> CFloat -> ImVec2 -> IO ImFontAtlasRectId
imFontAtlas_AddCustomRectFontGlyphForSize self font font_size codepoint w h advance_x offset =
  with offset $ \_p7 -> c_imFontAtlas_AddCustomRectFontGlyphForSize self font font_size codepoint w h advance_x _p7

-- C: ImFontAtlasRectId AddCustomRectRegular(ImFontAtlas* self, int w, int h)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddCustomRectRegular"
  imFontAtlas_AddCustomRectRegular :: (Ptr ImFontAtlas) -> CInt -> CInt -> IO ImFontAtlasRectId
-- C: ImFont* AddFont(ImFontAtlas* self, const ImFontConfig* font_cfg)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFont"
  imFontAtlas_AddFont :: (Ptr ImFontAtlas) -> (Ptr ImFontConfig) -> IO (Ptr ImFont)
-- C: ImFont* AddFontDefault(ImFontAtlas* self, const ImFontConfig* font_cfg)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFontDefault"
  imFontAtlas_AddFontDefault :: (Ptr ImFontAtlas) -> (Ptr ImFontConfig) -> IO (Ptr ImFont)
-- C: ImFont* AddFontDefaultBitmap(ImFontAtlas* self, const ImFontConfig* font_cfg)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFontDefaultBitmap"
  imFontAtlas_AddFontDefaultBitmap :: (Ptr ImFontAtlas) -> (Ptr ImFontConfig) -> IO (Ptr ImFont)
-- C: ImFont* AddFontDefaultVector(ImFontAtlas* self, const ImFontConfig* font_cfg)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFontDefaultVector"
  imFontAtlas_AddFontDefaultVector :: (Ptr ImFontAtlas) -> (Ptr ImFontConfig) -> IO (Ptr ImFont)
-- C: ImFont* AddFontFromFileTTF(ImFontAtlas* self, const char* filename, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFontFromFileTTF"
  imFontAtlas_AddFontFromFileTTF :: (Ptr ImFontAtlas) -> CString -> CFloat -> (Ptr ImFontConfig) -> (Ptr ImWchar) -> IO (Ptr ImFont)
-- C: ImFont* AddFontFromMemoryCompressedBase85TTF(ImFontAtlas* self, const char* compressed_font_data_base85, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFontFromMemoryCompressedBase85TTF"
  imFontAtlas_AddFontFromMemoryCompressedBase85TTF :: (Ptr ImFontAtlas) -> CString -> CFloat -> (Ptr ImFontConfig) -> (Ptr ImWchar) -> IO (Ptr ImFont)
-- C: ImFont* AddFontFromMemoryCompressedTTF(ImFontAtlas* self, const void* compressed_font_data, int compressed_font_data_size, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFontFromMemoryCompressedTTF"
  imFontAtlas_AddFontFromMemoryCompressedTTF :: (Ptr ImFontAtlas) -> (Ptr ()) -> CInt -> CFloat -> (Ptr ImFontConfig) -> (Ptr ImWchar) -> IO (Ptr ImFont)
-- C: ImFont* AddFontFromMemoryTTF(ImFontAtlas* self, void* font_data, int font_data_size, float size_pixels, const ImFontConfig* font_cfg, const ImWchar* glyph_ranges)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_AddFontFromMemoryTTF"
  imFontAtlas_AddFontFromMemoryTTF :: (Ptr ImFontAtlas) -> (Ptr ()) -> CInt -> CFloat -> (Ptr ImFontConfig) -> (Ptr ImWchar) -> IO (Ptr ImFont)
-- C: bool Build(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_Build"
  imFontAtlas_Build :: (Ptr ImFontAtlas) -> IO CBool
-- C: void CalcCustomRectUV(const ImFontAtlas* self, const ImFontAtlasRect* r, ImVec2* out_uv_min, ImVec2* out_uv_max)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_CalcCustomRectUV"
  imFontAtlas_CalcCustomRectUV :: (Ptr ImFontAtlas) -> (Ptr ImFontAtlasRect) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()
-- C: void Clear(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_Clear"
  imFontAtlas_Clear :: (Ptr ImFontAtlas) -> IO ()
-- C: void ClearFonts(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_ClearFonts"
  imFontAtlas_ClearFonts :: (Ptr ImFontAtlas) -> IO ()
-- C: void ClearInputData(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_ClearInputData"
  imFontAtlas_ClearInputData :: (Ptr ImFontAtlas) -> IO ()
-- C: void ClearTexData(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_ClearTexData"
  imFontAtlas_ClearTexData :: (Ptr ImFontAtlas) -> IO ()
-- C: void CompactCache(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_CompactCache"
  imFontAtlas_CompactCache :: (Ptr ImFontAtlas) -> IO ()
-- C: bool GetCustomRect(const ImFontAtlas* self, ImFontAtlasRectId id, ImFontAtlasRect* out_r)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetCustomRect"
  imFontAtlas_GetCustomRect :: (Ptr ImFontAtlas) -> ImFontAtlasRectId -> (Ptr ImFontAtlasRect) -> IO CBool
-- C: const ImFontAtlasRect* GetCustomRectByIndex(ImFontAtlas* self, ImFontAtlasRectId id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetCustomRectByIndex"
  imFontAtlas_GetCustomRectByIndex :: (Ptr ImFontAtlas) -> ImFontAtlasRectId -> IO (Ptr ImFontAtlasRect)
-- C: const ImWchar* GetGlyphRangesChineseFull(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesChineseFull"
  imFontAtlas_GetGlyphRangesChineseFull :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesChineseSimplifiedCommon(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesChineseSimplifiedCommon"
  imFontAtlas_GetGlyphRangesChineseSimplifiedCommon :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesCyrillic(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesCyrillic"
  imFontAtlas_GetGlyphRangesCyrillic :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesDefault(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesDefault"
  imFontAtlas_GetGlyphRangesDefault :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesGreek(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesGreek"
  imFontAtlas_GetGlyphRangesGreek :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesJapanese(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesJapanese"
  imFontAtlas_GetGlyphRangesJapanese :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesKorean(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesKorean"
  imFontAtlas_GetGlyphRangesKorean :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesThai(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesThai"
  imFontAtlas_GetGlyphRangesThai :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: const ImWchar* GetGlyphRangesVietnamese(ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetGlyphRangesVietnamese"
  imFontAtlas_GetGlyphRangesVietnamese :: (Ptr ImFontAtlas) -> IO (Ptr ImWchar)
-- C: void GetTexDataAsAlpha8(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetTexDataAsAlpha8"
  imFontAtlas_GetTexDataAsAlpha8 :: (Ptr ImFontAtlas) -> (Ptr (Ptr CUChar)) -> (Ptr CInt) -> (Ptr CInt) -> (Ptr CInt) -> IO ()
-- C: void GetTexDataAsRGBA32(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_GetTexDataAsRGBA32"
  imFontAtlas_GetTexDataAsRGBA32 :: (Ptr ImFontAtlas) -> (Ptr (Ptr CUChar)) -> (Ptr CInt) -> (Ptr CInt) -> (Ptr CInt) -> IO ()
-- C: bool IsBuilt(const ImFontAtlas* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_IsBuilt"
  imFontAtlas_IsBuilt :: (Ptr ImFontAtlas) -> IO CBool
-- C: void RemoveCustomRect(ImFontAtlas* self, ImFontAtlasRectId id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_RemoveCustomRect"
  imFontAtlas_RemoveCustomRect :: (Ptr ImFontAtlas) -> ImFontAtlasRectId -> IO ()
-- C: void RemoveFont(ImFontAtlas* self, ImFont* font)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_RemoveFont"
  imFontAtlas_RemoveFont :: (Ptr ImFontAtlas) -> (Ptr ImFont) -> IO ()
-- C: void SetFontLoader(ImFontAtlas* self, const ImFontLoader* font_loader)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_SetFontLoader"
  imFontAtlas_SetFontLoader :: (Ptr ImFontAtlas) -> (Ptr ImFontLoader) -> IO ()
-- C: void SetTexID(ImFontAtlas* self, ImTextureID id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFontAtlas_SetTexID"
  imFontAtlas_SetTexID :: (Ptr ImFontAtlas) -> ImTextureID -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImFontAtlas_SetTexIDImTextureRef_wrap"
  c_imFontAtlas_SetTexIDImTextureRef :: (Ptr ImFontAtlas) -> (Ptr ImTextureRef) -> IO ()

imFontAtlas_SetTexIDImTextureRef :: (Ptr ImFontAtlas) -> ImTextureRef -> IO ()
imFontAtlas_SetTexIDImTextureRef self id_ =
  with id_ $ \_p1 -> c_imFontAtlas_SetTexIDImTextureRef self _p1

